Add CBOR comparison JMH benchmarks for msgpack-jackson and msgpack-jackson3
Add JmhPlugin and CBOR dependency to msgpack-jackson (v2) and add CBOR
dependency to msgpack-jackson3 (v3) to enable like-for-like throughput
comparison between formats and Jackson versions.